0.101.1.13:
  - Fix extra space added to the "(PVP)" slug seen when entering the wilderness.
  - Fixes the tabcompleter for TownyAddonCommands.
    - Closes #7834.
  - Fix splash potion not applying to mobs, courtesy of SulkyWhale with PR #7839.
    - Closes #7838.
  - Allow the confirmation and invitation messages' colouring and formatting to be configurable.
    - Closes #7849.
  - New Config Option: invite_system.confirmation_format
    - Default: [/%s]
    - The format applied to the clickable confirmations.
    - e.g [/accept] would appear as default.
  - New Config Option: invite_system.confirmation_yes_colour
    - Default: <green>
    - The colour used to show the accept and confirm commands.
    - Allowed colours: <black>,<dark_blue>,<dark_green>,<dark_aqua>,<dark_red>,<dark_purple>,<gold>,<gray>,<dark_gray>,<blue>,<green>,<aqua>,<red>,<light_purple>,<yellow>,<white>
  - New Config Option: invite_system.confirmation_no_colour
    - Default: <red>
    - The colour used to show the deny and cancel commands.
    - Allowed colours: <black>,<dark_blue>,<dark_green>,<dark_aqua>,<dark_red>,<dark_purple>,<gold>,<gray>,<dark_gray>,<blue>,<green>,<aqua>,<red>,<light_purple>,<yellow>,<white>"
  - Fix hardcoded $ currency symbol in message, courtesy of Warrior with PR #7843.
0.101.1.14:
  - Fix Towny using VaultUnlockedEconomyProvider when someone is using VaultUnlocked.jar and a legacy Vault economy plugin.
  - Fix messages missing their Hovers and non-functional Clickables.
    - Closes #7852
  - Update MockBukkit to 4.50.0.
0.101.1.15:
  - Add TownCalculateMaxTownBlocksEvent, courtesy of Warrior with PR #7857.
    - Adds an event that is fired when the max town size is calculated, allowing plugins to change/override it in a more dynamic manner.
  - Fix throwing TownCalculateMaxTownBlocksEvent async.
  - Fix resident purge messaging saying it is deleting a resident when its really just trying to remove the resident's town.