@@ -70,11 +70,14 @@ public class ResidentPurge implements Runnable {
 
 				count++;
 				townyUniverse.getDataSource().removeResident(resident);
-				message(Translatable.of("msg_deleting_resident", resident.getName()));
+				if (count < 50)
+					message(Translatable.of("msg_deleting_resident", resident.getName()));
+				if (count == 50)
+					message(Translatable.of("msg_purge_reached_50_residents"));
 			}
 		}
 
-		message(Translatable.of("msg_purge_complete", count));
+		message(Translatable.of(townless ? "msg_purge_complete_x_removed_from_towns" : "msg_purge_complete", count));
 
 	}
 
