@@ -10352,3 +10352,4 @@ v0.92.0.11:
     - Adds an event that is fired when the max town size is calculated, allowing plugins to change/override it in a more dynamic manner.
   - Fix throwing TownCalculateMaxTownBlocksEvent async.
   - Fix resident purge messaging saying it is deleting a resident when its really just trying to remove the resident's town.
+  - Fix inaccurate removal message when inactive residents are only losing their town, also suppress resident-deleted-messages when more than 50 residents are removed at once.
